apps/gitea/gitea-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: balhau-dev
  labels:
    version: 0.0.9
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: 10.108.252.69:5000/balhau/gitea:armv6-0.0.9
        resources:
          requests:
            memory: "128Mi"
            cpu: "800m"
        volumeMounts:
        - name: gitea-git-store
          mountPath: /data
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP
        - containerPort: 22
          name: ssh
          protocol: TCP
      volumes:
      - name: gitea-git-store
        persistentVolumeClaim:
          claimName: gitea-git-pvc
