apps/gitea/gitea-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: balhau-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: gitea-certificate
      hosts:
        - git.balhau.net
  rules:
  - host: git.balhau.net
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: 3000
